force-app/main/default/objects/Product_Extension__c/fields/Brand_Alias__c.field-meta.xml
<CustomField>
    <fullName>Brand_Alias__c</fullName>
    <label>Brand Alias</label>
    <length>80</length>
    <type>Text</type>
</CustomField>