force-app/main/default/objects/Product_Extension__c/fields/Colour__c.field-meta.xml
<CustomField>
    <fullName>Colour__c</fullName>
    <label>Colour</label>
    <length>40</length>
    <type>Text</type>
</CustomField>