force-app/main/default/objects/Product_Extension__c/fields/Display__c.field-meta.xml
<CustomField>
    <fullName>Display__c</fullName>
    <label>Display</label>
    <length>120</length>
    <type>Text</type>
</CustomField>