force-app/main/default/objects/Product_Extension__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <length>120</length>
    <type>Text</type>
</CustomField>