force-app/main/default/objects/Product_Extension__c/fields/FA_Bizom_Id__c.field-meta.xml
<CustomField>
    <fullName>FA_Bizom_Id__c</fullName>
    <label>FA / Bizom Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>