force-app/main/default/objects/Product_Extension__c/fields/Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight__c</fullName>
    <label>Gross Weight (g)</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>