force-app/main/default/objects/Product_Extension__c/fields/Material_Type__c.field-meta.xml
<CustomField>
    <fullName>Material_Type__c</fullName>
    <label>Material Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>