force-app/main/default/objects/Product_Extension__c/fields/MT_Article_Code__c.field-meta.xml
<CustomField>
    <fullName>MT_Article_Code__c</fullName>
    <label>MT Article Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>