force-app/main/default/objects/Product_Extension__c/fields/Packing__c.field-meta.xml
<CustomField>
    <fullName>Packing__c</fullName>
    <label>Packing</label>
    <length>60</length>
    <type>Text</type>
</CustomField>