force-app/main/default/objects/Product_Extension__c/fields/Sub_Brand__c.field-meta.xml
<CustomField>
    <fullName>Sub_Brand__c</fullName>
    <label>Sub Brand</label>
    <length>120</length>
    <type>Text</type>
</CustomField>