force-app/main/default/objects/Product_Extension__c/fields/Tax_Classification__c.field-meta.xml
<CustomField>
    <fullName>Tax_Classification__c</fullName>
    <label>Tax Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Taxable</fullName><default>false</default><label>Taxable</label></value>
            <value><fullName>GST-Exempted</fullName><default>false</default><label>GST-Exempted</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>